# Activit-Pratique-N-4--LangGraph

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt  streamlit_app.py
langgraph_rag/: __init__.py  agent.py  knowledge_base.md  retriever.py  simple_graph.py
